--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -293,6 +293,7 @@ footer .footer_main .footer_tag a{
   margin: 0 5px;
   cursor: pointer;
   pointer-events: auto;
+  z-index: 10;
 }
 
 footer .footer_main .footer_tag i:hover{
